# ExtendedProfile

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.cfg
configs/: params.yml
notebooks/: extended_profile.ipynb
src/: clustering.py  data_io.py  ep_builder.py  metrics.py  optimize.py  scoring.py  sessions.py  utils.py
