[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "extendedprofile"
version = "0.1.0"
description = "Extended Profile (EP) para balizas con ventana fija y rolling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
